[gd_scene load_steps=2 format=2]

[ext_resource path="res://Scripts/HUD.gd" type="Script" id=1]

[node name="HUD" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="HealthLabel" type="Label" parent="."]
margin_right = 40.0
margin_bottom = 14.0
text = "Health: 0"

[node name="ScoreLabel" type="Label" parent="."]
margin_right = 640.0
margin_bottom = 14.0
text = "Score: 0"
align = 2

[node name="HighscoreLabel" type="Label" parent="."]
margin_top = 16.0
margin_right = 640.0
margin_bottom = 30.0
text = "Highscore: 0"
align = 2
